--- a/experiments/notebooks/Train_Model_WIDER.ipynb
+++ b/experiments/notebooks/Train_Model_WIDER.ipynb
@@ -10,7 +10,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -68,7 +70,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -214,6 +218,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -383,13 +388,7 @@
       "image: 002504.jpg iter: 110440 / 210000, total loss: 0.6620, rpn_loss_cls: 0.0207, rpn_loss_box: 0.1429, loss_cls: 0.0770, loss_box: 0.4214, lr: 0.000100\n",
       "speed: 0.305s / iter\n",
       "image: 016028.jpg iter: 110450 / 210000, total loss: 0.1000, rpn_loss_cls: 0.0051, rpn_loss_box: 0.0234, loss_cls: 0.0062, loss_box: 0.0653, lr: 0.000100\n",
-      "speed: 0.316s / iter\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "speed: 0.316s / iter\n",
       "image: 010746.jpg iter: 110460 / 210000, total loss: 1.0782, rpn_loss_cls: 0.0566, rpn_loss_box: 0.3463, loss_cls: 0.2755, loss_box: 0.3999, lr: 0.000100\n",
       "speed: 0.308s / iter\n",
       "image: 001626.jpg iter: 110470 / 210000, total loss: 0.7998, rpn_loss_cls: 0.0507, rpn_loss_box: 0.0912, loss_cls: 0.2334, loss_box: 0.4245, lr: 0.000100\n",
@@ -483,13 +482,7 @@
       "image: 006395.jpg iter: 110910 / 210000, total loss: 0.9588, rpn_loss_cls: 0.0693, rpn_loss_box: 0.2418, loss_cls: 0.2924, loss_box: 0.3553, lr: 0.000100\n",
       "speed: 0.315s / iter\n",
       "image: 014008.jpg iter: 110920 / 210000, total loss: 0.2333, rpn_loss_cls: 0.0149, rpn_loss_box: 0.0677, loss_cls: 0.0449, loss_box: 0.1058, lr: 0.000100\n",
-      "speed: 0.442s / iter\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "speed: 0.442s / iter\n",
       "image: 006061.jpg iter: 110930 / 210000, total loss: 0.2498, rpn_loss_cls: 0.0047, rpn_loss_box: 0.0951, loss_cls: 0.0273, loss_box: 0.1226, lr: 0.000100\n",
       "speed: 0.324s / iter\n",
       "image: 005683.jpg iter: 110940 / 210000, total loss: 0.2513, rpn_loss_cls: 0.0019, rpn_loss_box: 0.0758, loss_cls: 0.0318, loss_box: 0.1419, lr: 0.000100\n",
@@ -583,13 +576,7 @@
       "image: 010429.jpg iter: 111380 / 210000, total loss: 0.1465, rpn_loss_cls: 0.0093, rpn_loss_box: 0.0337, loss_cls: 0.0309, loss_box: 0.0726, lr: 0.000100\n",
       "speed: 0.328s / iter\n",
       "image: 002279.jpg iter: 111390 / 210000, total loss: 0.6503, rpn_loss_cls: 0.0428, rpn_loss_box: 0.5084, loss_cls: 0.0662, loss_box: 0.0328, lr: 0.000100\n",
-      "speed: 0.417s / iter\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "speed: 0.417s / iter\n",
       "image: 011803.jpg iter: 111400 / 210000, total loss: 0.2706, rpn_loss_cls: 0.0151, rpn_loss_box: 0.0400, loss_cls: 0.0666, loss_box: 0.1489, lr: 0.000100\n",
       "speed: 0.320s / iter\n",
       "image: 000435.jpg iter: 111410 / 210000, total loss: 0.1617, rpn_loss_cls: 0.0221, rpn_loss_box: 0.0298, loss_cls: 0.0272, loss_box: 0.0827, lr: 0.000100\n",
@@ -683,13 +670,7 @@
       "image: 007649.jpg iter: 111850 / 210000, total loss: 1.2813, rpn_loss_cls: 0.0843, rpn_loss_box: 0.3160, loss_cls: 0.2630, loss_box: 0.6180, lr: 0.000100\n",
       "speed: 0.321s / iter\n",
       "image: 004150.jpg iter: 111860 / 210000, total loss: 0.5873, rpn_loss_cls: 0.0440, rpn_loss_box: 0.4153, loss_cls: 0.1024, loss_box: 0.0256, lr: 0.000100\n",
-      "speed: 0.277s / iter\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "speed: 0.277s / iter\n",
       "image: 009717.jpg iter: 111870 / 210000, total loss: 0.1266, rpn_loss_cls: 0.0032, rpn_loss_box: 0.0178, loss_cls: 0.0353, loss_box: 0.0703, lr: 0.000100\n",
       "speed: 0.299s / iter\n",
       "image: 007356.jpg iter: 111880 / 210000, total loss: 1.1467, rpn_loss_cls: 0.0444, rpn_loss_box: 0.4223, loss_cls: 0.2533, loss_box: 0.4267, lr: 0.000100\n",
@@ -783,13 +764,7 @@
       "image: 008278.jpg iter: 112320 / 210000, total loss: 0.1028, rpn_loss_cls: 0.0022, rpn_loss_box: 0.0512, loss_cls: 0.0088, loss_box: 0.0406, lr: 0.000100\n",
       "speed: 0.258s / iter\n",
       "image: 006426.jpg iter: 112330 / 210000, total loss: 0.2357, rpn_loss_cls: 0.0083, rpn_loss_box: 0.0586, loss_cls: 0.0401, loss_box: 0.1288, lr: 0.000100\n",
-      "speed: 0.301s / iter\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "speed: 0.301s / iter\n",
       "image: 000636.jpg iter: 112340 / 210000, total loss: 1.2662, rpn_loss_cls: 0.1059, rpn_loss_box: 0.2043, loss_cls: 0.3005, loss_box: 0.6555, lr: 0.000100\n",
       "speed: 0.679s / iter\n",
       "image: 007142.jpg iter: 112350 / 210000, total loss: 0.3408, rpn_loss_cls: 0.0184, rpn_loss_box: 0.1654, loss_cls: 0.0354, loss_box: 0.1216, lr: 0.000100\n",
@@ -885,10 +860,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:python2]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-python2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -900,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
